--- a/components/Menu/Menu.module.scss
+++ b/components/Menu/Menu.module.scss
@@ -20,6 +20,7 @@
   .mobmenu {
     display: none;
   }
+
   &.open {
     background-color: purple;
     background-image: url(../../public/bgs/bg2.png);
@@ -85,9 +86,9 @@
   margin-bottom: -2.5px;
   letter-spacing: $letter-spacing-m;
   text-transform: uppercase;
-  a {
-    transition-duration: 350ms;
-  }
+  color: black;
+  transition-duration: 350ms;
+  font-weight: 900;
 }
 
 .logo {
@@ -97,6 +98,7 @@
   display: flex;
   align-items: flex-end;
   margin-top: 0.5rem;
+  transition-duration: 350ms;
   margin-bottom: 0.5rem;
   @media (max-width: 600px) {
     max-width: 80px;
@@ -114,6 +116,9 @@
 .dark {
   @extend .bg-black;
   .logo {
+    color: white;
+  }
+  .logoText {
     color: white;
   }
   img {
