--- a/components/TypeCards/TypeCards.module.scss
+++ b/components/TypeCards/TypeCards.module.scss
@@ -11,6 +11,7 @@
   text-decoration: none;
   min-width: 200px;
   max-width: 300px;
+  cursor: pointer;
   display: flex;
   flex-direction: column;
   flex: 1;
