--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -92,6 +92,8 @@ $colors: (
 .bg-green,
 .bg-purple,
 .bg-darkblue,
+.bg-blue,
+.bg-red,
 .bg-pinkdark,
 .bg-turqoise {
   color: white;
@@ -102,7 +104,6 @@ $colors: (
 .bg-greenlight,
 .bg-white,
 .bg-salmon,
-.bg-blue,
 .bg-pink {
   color: black;
 }
