--- a/components/Map/MapGl.module.scss
+++ b/components/Map/MapGl.module.scss
@@ -17,6 +17,20 @@ $extra-margin: ($enlarged-icon-size - $icon-size) / 2;
   align-items: center;
   cursor: pointer;
   transition-duration: 150ms;
+  .number {
+    height: 12px;
+    width: 12px;
+    top: -2px;
+    left: -2px;
+    font-size: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    //padding: 2px;
+
+    border-radius: 50%;
+    position: absolute;
+  }
   &.pointed {
     height: $enlarged-icon-size;
     width: $enlarged-icon-size;
@@ -46,7 +60,6 @@ $extra-margin: ($enlarged-icon-size - $icon-size) / 2;
   opacity: 0;
   background-color: white;
   border-radius: 0.25rem;
-
   &:before {
     content: "";
     position: absolute;
@@ -57,17 +70,30 @@ $extra-margin: ($enlarged-icon-size - $icon-size) / 2;
     border-right: 0.75rem solid white;
     border-bottom: 0.5rem solid transparent;
   }
+  .main {
+    font-weight: 900;
+    font-size: 16px;
+  }
   &.opened {
     font-size: 0.9rem;
+    font-family: "violet_sansregular";
     transition-duration: 150ms;
+    letter-spacing: 0.4px;
     padding: 0.75rem;
     margin-left: 2rem;
     width: auto;
     opacity: 1;
     line-height: 1;
     position: relative;
+    p {
+      font-weight: 900;
+      font-size: 0.75rem;
+      line-height: 1;
+      margin-bottom: 8px;
+      margin-top: 0;
+    }
     span {
-      opacity: 0.6;
+      //opacity: 0.6;
       font-size: 0.75rem;
     }
   }
